--- a/index.html
+++ b/index.html
@@ -89,15 +89,12 @@
 								<h3 class="text-uppercase resume-section-heading mb-4">awards</h3>
 
 								<div class="item mb-3">
-
+									<div class="item-heading row align-items-center mb-2"></div>
 									<div class="item-content">
-										<p>2022</p>
-										<p>Faculty Women’s Association Distinguished Graduate Student Award, ASU</p>
-										<p>Outstanding Research Award, ASU Graduate and Professional Student Association </p>
-										<p>Darwyn and Marie Linder Graduate Fellowship in Social Psychology, ASU </p>
-
-
-
+										<li>2022</li>
+										<li>Faculty Women’s Association Distinguished Graduate Student Award, ASU</li>
+										<li>Outstanding Research Award, ASU Graduate and Professional Student Association </li>
+										<li>Darwyn and Marie Linder Graduate Fellowship in Social Psychology, ASU </li>
 									</div>
 								</div><!--//item-->
 								<div class="item">
