--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 									<div class="item-heading row align-items-center mb-2"></div>
 									<div class="item-content">
 										<li>2022</li>
-										<li>Faculty Women’s Association Distinguished Graduate Student Award, ASU</li>
-										<li>Outstanding Research Award, ASU Graduate and Professional Student Association </li>
-										<li>Darwyn and Marie Linder Graduate Fellowship in Social Psychology, ASU </li>
+										<li><strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</li>
+										<li><strong>Outstanding Research Award</strong>, ASU Graduate and Professional Student Association </li>
+										<li><strong>Darwyn and Marie Linder Graduate Fellowship</strong>, Department of Psychology, ASU </li>
 									</div>
 								</div><!--//item-->
 								<div class="item">
