--- a/index.html
+++ b/index.html
@@ -87,11 +87,8 @@
 
 							<section class="awards-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">awards</h3>
-
-								<div class="item mb-3">
-									<div class="item-heading row align-items-center mb-2"></div>
-									<div class="item-content">
-										<li>2022</li>
+									<li class="mb-3">
+										<div class="font-weight-bold">
 										<li><strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</li>
 										<li><strong>Outstanding Research Award</strong>, ASU Graduate and Professional Student Association </li>
 										<li><strong>Darwyn and Marie Linder Graduate Fellowship</strong>, Department of Psychology, ASU </li>
