--- a/index.html
+++ b/index.html
@@ -84,7 +84,6 @@
 								</div><!--//item-->
 							</section><!--//education-section-->
 
-
 							<section class="awards-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">awards</h3>
 									<li class="mb-3">
@@ -94,6 +93,7 @@
 										<li><strong>Darwyn and Marie Linder Graduate Fellowship</strong>, Department of Psychology, ASU </li>
 									</div>
 								</div><!--//item-->
+
 								<div class="item">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Project Sed Fringilla</h4>
@@ -117,6 +117,21 @@
 									</div>
 								</div><!--//item-->
 							</section><!--//project-section-->
+
+							<section class="publication-section py-3">
+								<h3 class="text-uppercase resume-section-heading mb-4">publication</h3>
+								<div class="item mb-3">
+									<div class="item-heading row align-items-center mb-2">
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Project Lorem Ipsum</h4>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Open Source</div>
+
+									</div>
+									<div class="item-content">
+										<p>You can use this section for your side projects. You can <a href="#" class="theme-link">provide a project link here</a> as well. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+
+										
+									</div>
+								</div><!--//item-->
 						</div><!--//resume-main-->
 
 						<aside class="resume-aside col-12 col-lg-4 col-xl-3 px-lg-4 pb-lg-4">
