--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
 
 							<section class="awards-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">awards</h3>
-									<li class="mb-3">
-										<div class="font-weight-bold">
-										<li><strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</li>
-										<li><strong>Outstanding Research Award</strong>, ASU Graduate and Professional Student Association </li>
-										<li><strong>Darwyn and Marie Linder Graduate Fellowship</strong>, Department of Psychology, ASU </li>
+									<div class="mb-3">
+										<div class="font-weight-bold mb-2">
+										<p><strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</p>
+										<p><strong>Outstanding Research Award</strong>, ASU Graduate and Professional Student Association </p>
+										<p><strong>Darwyn and Marie Linder Graduate Fellowship</strong>, Department of Psychology, ASU </p>
 									</div>
 								</div><!--//item-->
 
@@ -129,7 +129,7 @@
 									<div class="item-content">
 										<p>You can use this section for your side projects. You can <a href="#" class="theme-link">provide a project link here</a> as well. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
 
-										
+
 									</div>
 								</div><!--//item-->
 						</div><!--//resume-main-->
