--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 								<h3 class="text-uppercase resume-section-heading mb-4">awards</h3>
 									<div class="mb-3">
 										<ul class="font-weight-bold mb-0">
-										<p><strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</p>
+										<p>2022\t<strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</p>
 										<p><strong>Outstanding Research Award</strong>, ASU Graduate and Professional Student Association </p>
 										<p><strong>Darwyn and Marie Linder Graduate Fellowship</strong>, Department of Psychology, ASU </p>
 									</ul>
