--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 								<h3 class="text-uppercase resume-section-heading mb-4">awards</h3>
 									<div class="mb-3">
 										<ul class="font-weight-bold mb-0">
-										<p>2022\t<strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</p>
-										<p><strong>Outstanding Research Award</strong>, ASU Graduate and Professional Student Association </p>
+										<li>2022\t<strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</li>
+										<li>\t<strong>Outstanding Research Award</strong>, ASU Graduate and Professional Student Association </li>
 										<p><strong>Darwyn and Marie Linder Graduate Fellowship</strong>, Department of Psychology, ASU </p>
 									</ul>
 								</div><!--//item-->
