--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
 											</div><!--//item-->
 									</section><!--//lab-section-->
 
-									<section class="education-section py-3">
-										<h3 class="text-uppercase resume-section-heading mb-4">Education</h3>
+									<section class="statistic-section py-3">
+										<h3 class="text-uppercase resume-section-heading mb-4">Statistic</h3>
 										<ul class="list-unstyled resume-education-list">
 											<li class="mb-3">
-												<div class="resume-degree font-weight-bold">Evolution, Ecology, & Social Behavior</div>
+												<div class="resume-degree font-weight-bold">ANOVA</div>
 												<div class="resume-degree-org text-muted">Steven L. Neuberg</div>
 												<div class="resume-degree-time text-muted">2010 - 2011</div>
 											</li>
@@ -200,13 +200,13 @@
 											<li>Spanish <span class="text-muted">(Professional)</span></li>
 										</ul>
 									</section><!--//certificates-section-->
-									<section class="skills-section py-3">
-										<h3 class="text-uppercase resume-section-heading mb-4">Interests</h3>
+									<section class="statistic-section py-3">
+										<h3 class="text-uppercase resume-section-heading mb-4">Statistic</h3>
 										<ul class="list-unstyled resume-interests-list mb-0">
-											<li class="mb-2">Climbing</li>
-											<li class="mb-2">Snowboarding</li>
-											<li class="mb-2">Photography</li>
-											<li>Travelling</li>
+											<li>ANOVA</li>
+											<li>Multiple regression</li>
+											<li>Multilevel</li>
+											<li>Longitudinal</li>
 										</ul>
 									</section><!--//certificates-section-->
 
