--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
 							<section class="awards-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">awards</h3>
 									<div class="item mb-3">
-										<ul class="font-weight-bold mb-0">
-											<p><strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</p>
-											<p><strong>Outstanding Research Award</strong>, ASU Graduate and Professional Student Association </p>
-											<p><strong>Darwyn and Marie Linder Graduate Fellowship</strong>, Department of Psychology, ASU </p>
+										<ul class="list-unstyled resume-lab-list mb-0">
+											<li><strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</li>
+											<li><strong>Outstanding Research Award</strong>, ASU Graduate and Professional Student Association </li>
+											<li><strong>Darwyn and Marie Linder Graduate Fellowship</strong>, Department of Psychology, ASU </li>
 										</ul>
 								</div><!--//item-->
 
