--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 							</section><!--//education-section-->
 
 							<section class="awards-section py-3">
-								<h3 class="text-uppercase resume-section-heading mb-4">awards</h3>
+								<h3 class="text-uppercase resume-section-heading mb-4">Honors & Awards</h3>
 									<div class="item mb-3">
-										<ul class="list-unstyled resume-lab-list mb-0">
+										<ul class="list-unstyled resume-awards-list mb-0">
 											<li><strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</li>
 											<li><strong>Outstanding Research Award</strong>, ASU Graduate and Professional Student Association </li>
 											<li><strong>Darwyn and Marie Linder Graduate Fellowship</strong>, Department of Psychology, ASU </li>
@@ -201,12 +201,12 @@
 										</ul>
 									</section><!--//certificates-section-->
 									<section class="statistic-section py-3">
-										<h3 class="text-uppercase resume-section-heading mb-4">Statistic</h3>
+										<h3 class="text-uppercase resume-section-heading mb-4">Quantitative Training</h3>
 										<ul class="list-unstyled resume-interests-list mb-0">
-											<li>ANOVA</li>
-											<li>Multiple regression</li>
-											<li>Multilevel</li>
-											<li>Longitudinal</li>
+											<li>ANOVA |Kevin Grimm</li>
+											<li>Multiple regression |Leona Aiken</li>
+											<li>Multilevel Modeling |Daniel McNeish</li>
+											<li>Longitudinal Growth Modeling |Daniel McNeish</li>
 										</ul>
 									</section><!--//certificates-section-->
 
