--- a/index.html
+++ b/index.html
@@ -85,12 +85,17 @@
 							</section><!--//education-section-->
 
 							<section class="awards-section py-3">
-								<h3 class="text-uppercase resume-section-heading mb-4">Honors & Awards</h3>
+								<h3 class="text-uppercase resume-section-heading mb-4">Award</h3>
 									<div class="item mb-3">
 										<ul class="list-unstyled resume-awards-list mb-0">
 											<li><strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</li>
 											<li><strong>Outstanding Research Award</strong>, ASU Graduate and Professional Student Association </li>
 											<li><strong>Darwyn and Marie Linder Graduate Fellowship</strong>, Department of Psychology, ASU </li>
+											<li><strong>Graduate Outstanding Research Award</strong>, Department of Psychology, ASU </li>
+											<li><strong>The College Graduate Excellence Award</strong>, ASU </li>
+											<li><strong>JumpStart Seed Research Grant</strong>, ASU Graduate and Professional Student Association </li>
+											<li><strong>Research Excellence Award</strong>, Department of Psychology, ASU </li>
+											<li><strong>Brain Korea 21+ Scholarship</strong>, Ministry of Science, ICT, and Future Planning </li>
 										</ul>
 								</div><!--//item-->
 
