--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 							<section class="awards-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">Award</h3>
-									<div class="item mb-3">
+									<div class="font-weight-bold mb-3">
 										<ul class="list-unstyled resume-awards-list mb-0">
 											<li><strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</li>
 											<li><strong>Outstanding Research Award</strong>, ASU Graduate and Professional Student Association </li>
