--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
 									<section class="statistic-section py-3">
 										<h3 class="text-uppercase resume-section-heading mb-4">Quantitative Training</h3>
 										<ul class="list-unstyled resume-interests-list mb-0">
-											<li>ANOVA |Kevin Grimm</li>
-											<li>Multiple regression |Leona Aiken</li>
-											<li>Multilevel Modeling |Daniel McNeish</li>
-											<li>Longitudinal Growth Modeling |Daniel McNeish</li>
+											<li>ANOVA | Kevin Grimm</li>
+											<li>Multiple regression | Leona Aiken</li>
+											<li>Multilevel | Daniel McNeish</li>
+											<li>Longitudinal growth | Daniel McNeish</li>
 										</ul>
 									</section><!--//certificates-section-->
 
