--- a/index.html
+++ b/index.html
@@ -210,8 +210,8 @@
 										<ul class="list-unstyled resume-interests-list mb-0">
 											<li>ANOVA | Kevin Grimm</li>
 											<li>Multiple regression | Leona Aiken</li>
-											<li>Multilevel | Daniel McNeish</li>
-											<li>Longitudinal growth | Daniel McNeish</li>
+											<li>Multilevel model | Daniel McNeish</li>
+											<li>Longitudinal growth model | Daniel McNeish</li>
 										</ul>
 									</section><!--//certificates-section-->
 
