--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 								<h3 class="text-uppercase resume-section-heading mb-4">Award</h3>
 									<div class="mb-3">
 										<ul class="list-unstyled resume-awards-list mb-0">
-											<li><strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</li>
+											<li>2022&nbsp;<strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</li>
 											<li><strong>Outstanding Research Award</strong>, ASU Graduate and Professional Student Association </li>
 											<li><strong>Darwyn and Marie Linder Graduate Fellowship</strong>, Department of Psychology, ASU </li>
 											<li><strong>Graduate Outstanding Research Award</strong>, Department of Psychology, ASU </li>
@@ -210,8 +210,8 @@
 										<ul class="list-unstyled resume-interests-list mb-0">
 											<li>ANOVA | Kevin Grimm</li>
 											<li>Multiple regression | Leona Aiken</li>
-											<li>Multilevel model | Daniel McNeish</li>
-											<li>Longitudinal growth model | Daniel McNeish</li>
+											<li>Multilevel | Daniel McNeish</li>
+											<li>Longitudinal growth | Daniel McNeish</li>
 										</ul>
 									</section><!--//certificates-section-->
 
