--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
 									<div class="item mb-3">
 										<ul class="list-unstyled resume-awards-list mb-0">
 											<li>2022&nbsp;<strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</li>
-											<li><strong>Outstanding Research Award</strong>, ASU Graduate and Professional Student Association </li>
-											<li><strong>Darwyn and Marie Linder Graduate Fellowship</strong>, Department of Psychology, ASU </li>
-											<li><strong>Graduate Outstanding Research Award</strong>, Department of Psychology, ASU </li>
+											<li><&nbsp;&nbsp;&nbsp;&nbsp;strong>Outstanding Research Award</strong>, ASU Graduate and Professional Student Association </li>
+											<li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>Darwyn and Marie Linder Graduate Fellowship</strong>, Department of Psychology, ASU </li>
+											<li>2020&nbsp;<strong>Graduate Outstanding Research Award</strong>, The Society for Personality and Social Psychology </li>
 											<li><strong>The College Graduate Excellence Award</strong>, ASU </li>
 											<li><strong>JumpStart Seed Research Grant</strong>, ASU Graduate and Professional Student Association </li>
 											<li><strong>Research Excellence Award</strong>, Department of Psychology, ASU </li>
@@ -170,21 +170,6 @@
 											</div><!--//item-->
 									</section><!--//lab-section-->
 
-									<section class="statistic-section py-3">
-										<h3 class="text-uppercase resume-section-heading mb-4">Statistic</h3>
-										<ul class="list-unstyled resume-education-list">
-											<li class="mb-3">
-												<div class="resume-degree font-weight-bold">ANOVA</div>
-												<div class="resume-degree-org text-muted">Steven L. Neuberg</div>
-												<div class="resume-degree-time text-muted">2010 - 2011</div>
-											</li>
-											<li>
-												<div class="resume-degree font-weight-bold">BSc Maths and Physics</div>
-												<div class="resume-degree-org text-muted">Imperial College London</div>
-												<div class="resume-degree-time text-muted">2007 - 2010</div>
-											</li>
-										</ul>
-									</section><!--//education-section-->
 									<section class="education-section py-3">
 										<h3 class="text-uppercase resume-section-heading mb-4">Awards</h3>
 										<ul class="list-unstyled resume-awards-list">
@@ -198,13 +183,15 @@
 											</li>
 										</ul>
 									</section><!--//education-section-->
+
 									<section class="skills-section py-3">
 										<h3 class="text-uppercase resume-section-heading mb-4">Languages</h3>
 										<ul class="list-unstyled resume-lang-list">
 											<li class="mb-2">English <span class="text-muted">(Native)</span></li>
 											<li>Spanish <span class="text-muted">(Professional)</span></li>
 										</ul>
-									</section><!--//certificates-section-->
+									</section><!--//statistic-section-->
+
 									<section class="statistic-section py-3">
 										<h3 class="text-uppercase resume-section-heading mb-4">Quantitative Training</h3>
 										<ul class="list-unstyled resume-interests-list mb-0">
@@ -213,7 +200,31 @@
 											<li>Multilevel | Daniel McNeish</li>
 											<li>Longitudinal growth | Daniel McNeish</li>
 										</ul>
-									</section><!--//certificates-section-->
+									</section><!--//statistic-section-->
+
+									<section class="reference-section py-3">
+										<h3 class="text-uppercase resume-section-heading mb-4">Reference</h3>
+										<ul class="list-unstyled resume-reference-list">
+											<li class="mb-3">
+												<div class="resume-degree font-weight-bold">Steven L. Neuberg</div>
+												<div class="resume-degree-org text-muted">Foundation Professor and Chair of Psychology</div>
+												<div class="resume-degree-time text-muted">steven.neuberg@asu.edu</div>
+											</li>
+
+											<li>
+												<div class="resume-degree font-weight-bold">Douglas T. Kenrick</div>
+												<div class="resume-degree-org text-muted">President’s Professor of Psychology</div>
+												<div class="resume-degree-time text-muted">douglas.kenrick@asu.edu</div>
+											</li>
+
+											<li>
+												<div class="resume-degree font-weight-bold">Michael E. W. Varnum</div>
+												<div class="resume-degree-org text-muted">Associate Professor of Psychology</div>
+												<div class="resume-degree-time text-muted">mvarnum@asu.edu</div>
+											</li>
+
+										</ul>
+									</section><!--//reference-section-->
 
 								</aside><!--//resume-aside-->
 							</div><!--//row-->
