--- a/index.html
+++ b/index.html
@@ -88,14 +88,13 @@
 								<h3 class="text-uppercase resume-section-heading mb-4">Award</h3>
 									<div class="item mb-3">
 										<ul class="list-unstyled resume-awards-list mb-0">
-											<li>2022&nbsp;<strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</li>
-											<li><&nbsp;&nbsp;&nbsp;&nbsp;strong>Outstanding Research Award</strong>, ASU Graduate and Professional Student Association </li>
-											<li>&nbsp;&nbsp;&nbsp;&nbsp;<strong>Darwyn and Marie Linder Graduate Fellowship</strong>, Department of Psychology, ASU </li>
-											<li>2020&nbsp;<strong>Graduate Outstanding Research Award</strong>, The Society for Personality and Social Psychology </li>
-											<li><strong>The College Graduate Excellence Award</strong>, ASU </li>
-											<li><strong>JumpStart Seed Research Grant</strong>, ASU Graduate and Professional Student Association </li>
-											<li><strong>Research Excellence Award</strong>, Department of Psychology, ASU </li>
-											<li><strong>Brain Korea 21+ Scholarship</strong>, Ministry of Science, ICT, and Future Planning </li>
+											<li>2022 <strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</li>
+											<li>2022 <strong>Outstanding Research Award</strong>, ASU Graduate and Professional Student Association </li>
+											<li>2022<strong>Darwyn and Marie Linder Graduate Fellowship</strong>, Department of Psychology, ASU </li>
+											<li>2019, 2021, 2022<strong>The College Graduate Excellence Award</strong>, ASU </li>
+											<li>2018 JumpStart Seed Research Grant</strong>, ASU Graduate and Professional Student Association </li>
+											<li>2017 Research Excellence Award</strong>, Department of Psychology, ASU </li>
+											<li>2015-2017 Brain Korea 21+ Scholarship</strong>, Ministry of Science, ICT, and Future Planning </li>
 										</ul>
 								</div><!--//item-->
 
@@ -126,15 +125,9 @@
 							<section class="publication-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">publication</h3>
 								<div class="item mb-3">
-									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Project Lorem Ipsum</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Open Source</div>
-
-									</div>
-									<div class="item-content">
-										<p>You can use this section for your side projects. You can <a href="#" class="theme-link">provide a project link here</a> as well. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-
-
+									<ul class="list-unstyled resume-awards-list mb-0">
+										<li> <strong>Ko, A.</strong>, Pick, C. M., Kwon, J. Y., Barlev, M., Krems, J. A., Varnum, M. E., ... & Kenrick, D. T. (2020). <strong>Family matters: Rethinking the psychology of human social motivation.</strong> <i>Perspectives on Psychological Science, 15<i>(1), 173-201.</li>
+										</ul>
 									</div>
 								</div><!--//item-->
 						</div><!--//resume-main-->
@@ -206,20 +199,20 @@
 										<h3 class="text-uppercase resume-section-heading mb-4">Reference</h3>
 										<ul class="list-unstyled resume-reference-list">
 											<li class="mb-3">
-												<div class="resume-degree font-weight-bold">Steven L. Neuberg</div>
-												<div class="resume-degree-org text-muted">Foundation Professor and Chair of Psychology</div>
+												<div class="font-weight-bold">Steven L. Neuberg</div>
+												<div class="text-muted">Foundation Professor and Chair of Psychology</div>
 												<div class="resume-degree-time text-muted">steven.neuberg@asu.edu</div>
 											</li>
 
 											<li>
-												<div class="resume-degree font-weight-bold">Douglas T. Kenrick</div>
-												<div class="resume-degree-org text-muted">President’s Professor of Psychology</div>
+												<div class="font-weight-bold">Douglas T. Kenrick</div>
+												<div class="text-muted">President’s Professor of Psychology</div>
 												<div class="resume-degree-time text-muted">douglas.kenrick@asu.edu</div>
 											</li>
 
 											<li>
-												<div class="resume-degree font-weight-bold">Michael E. W. Varnum</div>
-												<div class="resume-degree-org text-muted">Associate Professor of Psychology</div>
+												<div class="font-weight-bold">Michael E. W. Varnum</div>
+												<div class="text-muted">Associate Professor of Psychology</div>
 												<div class="resume-degree-time text-muted">mvarnum@asu.edu</div>
 											</li>
 
