--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
 									</div>
 								</div><!--//item-->
 						</div><!--//resume-main-->
+					</section>
+					
 
 						<aside class="resume-aside col-12 col-lg-4 col-xl-3 px-lg-4 pb-lg-4">
 							<section class="lab-section py-3">
