--- a/index.html
+++ b/index.html
@@ -88,20 +88,20 @@
 								<h3 class="text-uppercase resume-section-heading mb-4">Award</h3>
 									<div class="item mb-3">
 										<ul class="list-unstyled resume-awards-list mb-0">
-											<li>2022 <strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</li>
-											<li>2022 <strong>Outstanding Research Award</strong>, ASU Graduate and Professional Student Association </li>
-											<li>2022<strong>Darwyn and Marie Linder Graduate Fellowship</strong>, Department of Psychology, ASU </li>
-											<li>2019, 2021, 2022<strong>The College Graduate Excellence Award</strong>, ASU </li>
-											<li>2018 JumpStart Seed Research Grant</strong>, ASU Graduate and Professional Student Association </li>
-											<li>2017 Research Excellence Award</strong>, Department of Psychology, ASU </li>
-											<li>2015-2017 Brain Korea 21+ Scholarship</strong>, Ministry of Science, ICT, and Future Planning </li>
+											<li>2022             <strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</li>
+											<li>2022             <strong>Outstanding Research Award</strong>, ASU Graduate and Professional Student Association </li>
+											<li>2022             <strong>Darwyn and Marie Linder Graduate Fellowship</strong>, Department of Psychology, ASU </li>
+											<li>2019, 2021, 2022 <strong>The College Graduate Excellence Award</strong>, ASU </li>
+											<li>2018             <strong>JumpStart Seed Research Grant</strong>, ASU Graduate and Professional Student Association </li>
+											<li>2017             <strong>Research Excellence Award</strong>, Department of Psychology, ASU </li>
+											<li>2015-2017        <strong>Brain Korea 21+ Scholarship</strong>, Ministry of Science, ICT, and Future Planning </li>
 										</ul>
 								</div><!--//item-->
 
 								<div class="item">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Project Sed Fringilla</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Open Source</div>
+										<h4 class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0"><strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</h4>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2022</div>
 
 									</div>
 									<div class="item-content">
@@ -132,7 +132,7 @@
 								</div><!--//item-->
 						</div><!--//resume-main-->
 					</section>
-					
+
 
 						<aside class="resume-aside col-12 col-lg-4 col-xl-3 px-lg-4 pb-lg-4">
 							<section class="lab-section py-3">
