--- a/index.html
+++ b/index.html
@@ -130,10 +130,9 @@
 										</ul>
 									</div>
 								</div><!--//item-->
+							</section><!--//project-section-->
 						</div><!--//resume-main-->
-					</section>
-
-
+						
 						<aside class="resume-aside col-12 col-lg-4 col-xl-3 px-lg-4 pb-lg-4">
 							<section class="lab-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">Lab</h3>
