--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 
 								<div class="item">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0"><strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2022</div>
+										<h4 class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Faculty Women’s Association Distinguished Graduate Student Award, ASU</h4>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">The Society for Personality and Social Psychology, 2022</div>
 
 									</div>
 									<div class="item-content">
@@ -132,7 +132,7 @@
 								</div><!--//item-->
 							</section><!--//project-section-->
 						</div><!--//resume-main-->
-						
+
 						<aside class="resume-aside col-12 col-lg-4 col-xl-3 px-lg-4 pb-lg-4">
 							<section class="lab-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">Lab</h3>
