--- a/index.html
+++ b/index.html
@@ -101,12 +101,50 @@
 								<div class="item">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Faculty Women’s Association Distinguished Graduate Student Award, ASU</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">The Society for Personality and Social Psychology, 2022</div>
-
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2022</div>
 									</div>
-									<div class="item-content">
-										<p>You can use this section for your side projects. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.</p>
-
+								</div><!--//item-->
+								<div class="item">
+									<div class="item-heading row align-items-center mb-2">
+										<h4 class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Outstanding Research Award, ASU Graduate and Professional Student Association</h4>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2022</div>
+									</div>
+								</div><!--//item-->
+								<div class="item">
+									<div class="item-heading row align-items-center mb-2">
+										<h4 class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Darwyn and Marie Linder Graduate Fellowship, Department of Psychology, ASU </li>
+										<li>2019, 2021, 2022 <strong>The College</h4>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2022</div>
+									</div>
+								</div><!--//item-->
+								<div class="item">
+									<div class="item-heading row align-items-center mb-2">
+										<h4 class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Graduate Outstanding Research Award, The Society for Personality and Social Psychology</h4>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2020</div>
+									</div>
+								</div><!--//item-->
+								<div class="item">
+									<div class="item-heading row align-items-center mb-2">
+										<h4 class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">The College Graduate Excellence Award, ASU</h4>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2019, 2020, 2022</div>
+									</div>
+								</div><!--//item-->
+								<div class="item">
+									<div class="item-heading row align-items-center mb-2">
+										<h4 class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">JumpStart Seed Research Grant, ASU Graduate and Professional Student Association</h4>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2018</div>
+									</div>
+								</div><!--//item-->
+								<div class="item">
+									<div class="item-heading row align-items-center mb-2">
+										<h4 class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Research Excellence Award, Department of Psychology, ASU </h4>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2017</div>
+									</div>
+								</div><!--//item-->
+								<div class="item">
+									<div class="item-heading row align-items-center mb-2">
+										<h4 class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Brain Korea 21+ Scholarship, Ministry of Science, ICT, and Future Planning</h4>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2015-2017</div>
 									</div>
 								</div><!--//item-->
 
