--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
 								</div><!--//item-->
 								<div class="item">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Darwyn and Marie Linder Graduate Fellowship, Department of Psychology, ASU </li>
-										<li>2019, 2021, 2022 <strong>The College</h4>
+										<h4 class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Darwyn and Marie Linder Graduate Fellowship, Department of Psychology, ASU </h4>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2022</div>
 									</div>
 								</div><!--//item-->
@@ -161,19 +160,7 @@
 								</div><!--//item-->
 
 							</section><!--//awards-section-->
-
-							<section class="publication-section py-3">
-								<h3 class="text-uppercase resume-section-heading mb-4">publication</h3>
-								<div class="item mb-3">
-									<ul class="list-unstyled resume-awards-list mb-0">
-										<li> <strong>Ko, A.</strong>, Pick, C. M., Kwon, J. Y., Barlev, M., Krems, J. A., Varnum, M. E., ... & Kenrick, D. T. (2020). <strong>Family matters: Rethinking the psychology of human social motivation.</strong> <i>Perspectives on Psychological Science, 15<i>(1), 173-201.</li>
-										</ul>
-									</div>
-								</div><!--//item-->
-							</section><!--//project-section-->
-
 						</div><!--//resume-main-->
-
 						<aside class="resume-aside col-12 col-lg-4 col-xl-3 px-lg-4 pb-lg-4">
 							<section class="lab-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">Lab</h3>
