--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 								<div class="item">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Faculty Women’s Association Distinguished Graduate Student Award, ASU</h4>
+										<ul class="list-unstyled col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Faculty Women’s Association Distinguished Graduate Student Award, ASU</ul>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2022</div>
 									</div>
 								</div><!--//item-->
