--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
 
 									<section class="reference-section py-3">
 										<h3 class="text-uppercase resume-section-heading mb-4">Reference</h3>
-										<ul class="list-unstyled resume-reference-list">
-											<li class="mb-3">
+										<ul class="list-unstyled resume-reference-list mb-0">
+											<li class="mb-2">
 												<div class="font-weight-bold">Steven L. Neuberg</div>
 												<div class="text-muted">Foundation Professor and Chair of Psychology</div>
 												<div class="resume-degree-time text-muted">steven.neuberg@asu.edu</div>
