--- a/index.html
+++ b/index.html
@@ -88,14 +88,11 @@
 								<h3 class="text-uppercase resume-section-heading mb-4">Award</h3>
 									<div class="item mb-3">
 										<ul class="list-unstyled resume-awards-list mb-0">
-											<li>2022             <strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</li>
-											<li>2022             <strong>Outstanding Research Award</strong>, ASU Graduate and Professional Student Association </li>
-											<li>2022             <strong>Darwyn and Marie Linder Graduate Fellowship</strong>, Department of Psychology, ASU </li>
-											<li>2019, 2021, 2022 <strong>The College Graduate Excellence Award</strong>, ASU </li>
-											<li>2018             <strong>JumpStart Seed Research Grant</strong>, ASU Graduate and Professional Student Association </li>
-											<li>2017             <strong>Research Excellence Award</strong>, Department of Psychology, ASU </li>
-											<li>2015-2017        <strong>Brain Korea 21+ Scholarship</strong>, Ministry of Science, ICT, and Future Planning </li>
+											<li><strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</li>
+											<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2022</div>
 										</ul>
+									</div>
+					
 								</div><!--//item-->
 
 								<div class="item">
