--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 											<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2022</div>
 										</ul>
 									</div>
-					
+
 								</div><!--//item-->
 
 								<div class="item">
@@ -224,9 +224,7 @@
 									<section class="reference-section py-3">
 										<h3 class="text-uppercase resume-section-heading mb-4">Reference</h3>
 										<ul class="list-unstyled resume-reference-list mb-0">
-											<li class="mb-2">
-												<div class="font-weight-bold">Steven L. Neuberg</div>
-												<div class="text-muted">Foundation Professor and Chair of Psychology</div>
+											<li class="mb-2">Steven L. Neuberg <span class="text-muted">Foundation Professor and Chair of Psychology</div>
 												<div class="resume-degree-time text-muted">steven.neuberg@asu.edu</div>
 											</li>
 
