--- a/index.html
+++ b/index.html
@@ -84,66 +84,31 @@
 								</div><!--//item-->
 							</section><!--//education-section-->
 
-							<section class="awards-section py-3">
+							<section class="award-section py-3">
 								<h3 class="text-uppercase resume-section-heading mb-4">Award</h3>
-									<div class="item mb-3">
-										<ul class="list-unstyled resume-awards-list mb-0">
-											<li><strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</li>
-											<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2022</div>
-										</ul>
-									</div>
-
-								</div><!--//item-->
-
-								<div class="item">
+								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
-										<ul class="list-unstyled col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Faculty Women’s Association Distinguished Graduate Student Award, ASU</ul>
+										<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Faculty Women’s Association Distinguished Graduate Student Award, ASU</div>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2022</div>
-									</div>
-								</div><!--//item-->
-								<div class="item">
-									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Outstanding Research Award, ASU Graduate and Professional Student Association</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2022</div>
-									</div>
-								</div><!--//item-->
-								<div class="item">
-									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Darwyn and Marie Linder Graduate Fellowship, Department of Psychology, ASU </h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2022</div>
-									</div>
-								</div><!--//item-->
-								<div class="item">
-									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Graduate Outstanding Research Award, The Society for Personality and Social Psychology</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2020</div>
-									</div>
-								</div><!--//item-->
-								<div class="item">
-									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">The College Graduate Excellence Award, ASU</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2019, 2020, 2022</div>
-									</div>
-								</div><!--//item-->
-								<div class="item">
-									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">JumpStart Seed Research Grant, ASU Graduate and Professional Student Association</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2018</div>
-									</div>
-								</div><!--//item-->
-								<div class="item">
-									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Research Excellence Award, Department of Psychology, ASU </h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2017</div>
-									</div>
-								</div><!--//item-->
-								<div class="item">
-									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Brain Korea 21+ Scholarship, Ministry of Science, ICT, and Future Planning</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2015-2017</div>
-									</div>
-								</div><!--//item-->
 
+									</div>
+									<div class="item-content">
+										<p>You can use this section for your side projects. You can <a href="#" class="theme-link">provide a project link here</a> as well. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+
+
+									</div>
+								</div><!--//item-->
+								<div class="item">
+									<div class="item-heading row align-items-center mb-2">
+										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Project Sed Fringilla</h4>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Open Source</div>
+
+									</div>
+									<div class="item-content">
+										<p>You can use this section for your side projects. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.</p>
+
+									</div>
+								</div><!--//item-->
 								<div class="item">
 									<div class="item-heading row align-items-center mb-2">
 										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Project Praesent </h4>
@@ -155,6 +120,9 @@
 
 									</div>
 								</div><!--//item-->
+							</section><!--//project-section-->
+
+
 
 							</section><!--//awards-section-->
 						</div><!--//resume-main-->
