--- a/index.html
+++ b/index.html
@@ -191,22 +191,17 @@
 
 									<section class="reference-section py-3">
 										<h3 class="text-uppercase resume-section-heading mb-4">Reference</h3>
-										<ul class="list-unstyled resume-reference-list mb-0">
-											<li class="mb-2">Steven L. Neuberg <span class="text-muted">Foundation Professor and Chair of Psychology</div>
+										<ul class="list-unstyled resume-education-list">
+											<li class="mb-3">
+												<div class="resume-degree font-weight-bold">Steven L. Neuberg</div>
+												<div class="resume-degree-org text-muted">Professor and Chair of Psychology</div>
 												<div class="resume-degree-time text-muted">steven.neuberg@asu.edu</div>
 											</li>
-
 											<li>
-												<div class="font-weight-bold">Douglas T. Kenrick</div>
-												<div class="text-muted">President’s Professor of Psychology</div>
-												<div class="resume-degree-time text-muted">douglas.kenrick@asu.edu</div>
+												<div class="font-weight-bold">Award Donec Sodales</div>
+												<div class="text-muted">Oracle Aenean (2017)</div>
 											</li>
-
-											<li>
-												<div class="font-weight-bold">Michael E. W. Varnum</div>
-												<div class="text-muted">Associate Professor of Psychology</div>
-												<div class="resume-degree-time text-muted">mvarnum@asu.edu</div>
-											</li>
+										</ul>
 
 										</ul>
 									</section><!--//reference-section-->
