--- a/index.html
+++ b/index.html
@@ -88,20 +88,15 @@
 								<h3 class="text-uppercase resume-section-heading mb-4">Award</h3>
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
-										<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Faculty Women’s Association Distinguished Graduate Student Award, ASU</div>
+										<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0"><strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</div>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2022</div>
-
-									</div>
-									<div class="item-content">
-										<p>You can use this section for your side projects. You can <a href="#" class="theme-link">provide a project link here</a> as well. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-
-
 									</div>
 								</div><!--//item-->
+
 								<div class="item">
 									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Project Sed Fringilla</h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Open Source</div>
+										<h4 class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0"><strong>Outstanding Research Award</strong>, ASU Graduate and Professional Student Association</h4>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2022</div>
 
 									</div>
 									<div class="item-content">
