--- a/index.html
+++ b/index.html
@@ -167,10 +167,9 @@
 									</section><!--//education-section-->
 
 									<section class="skills-section py-3">
-										<h3 class="text-uppercase resume-section-heading mb-4">Languages</h3>
+										<h3 class="text-uppercase resume-section-heading mb-4">Language</h3>
 										<ul class="list-unstyled resume-lang-list">
-											<li class="mb-2">English <span class="text-muted">(Native)</span></li>
-											<li>Spanish <span class="text-muted">(Professional)</span></li>
+											<li class="mb-0">Korean, English, R, HTML, SPSS, SAS</li>
 										</ul>
 									</section><!--//statistic-section-->
 
@@ -179,8 +178,7 @@
 										<ul class="list-unstyled resume-interests-list mb-0">
 											<li>ANOVA | Kevin Grimm</li>
 											<li>Multiple regression | Leona Aiken</li>
-											<li>Multilevel | Daniel McNeish</li>
-											<li>Longitudinal growth | Daniel McNeish</li>
+											<li>Multilevel & Longitudinal growth | Daniel McNeish</li>
 										</ul>
 									</section><!--//statistic-section-->
 
@@ -193,8 +191,14 @@
 												<div class="resume-degree-time text-muted">steven.neuberg@asu.edu</div>
 											</li>
 											<li>
-												<div class="font-weight-bold">Award Donec Sodales</div>
-												<div class="text-muted">Oracle Aenean (2017)</div>
+												<div class="resume-degree font-weight-bold">Douglas T. Kenrick</div>
+												<div class="resume-degree-org text-muted">President’s Professor of Psychology</div>
+												<div class="resume-degree-time text-muted">douglas.kenrick@asu.edu</div>
+											</li>
+											<li>
+												<div class="resume-degree font-weight-bold">Michael E. W. Varnum</div>
+												<div class="resume-degree-org text-muted">Associate Professor of Psychology</div>
+												<div class="resume-degree-time text-muted">mvarnum@asu.edu</div>
 											</li>
 										</ul>
 
