--- a/index.html
+++ b/index.html
@@ -90,31 +90,20 @@
 									<div class="item-heading row align-items-center mb-2">
 										<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0"><strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</div>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2022</div>
-										<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0"><strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</div>
+										<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0"><strong>Outstanding Research Award</strong>, ASU Graduate and Professional Student Association</div>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2022</div>
-									</div>
-								</div><!--//item-->
-
-								<div class="item">
-									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0"><strong>Outstanding Research Award</strong>, ASU Graduate and Professional Student Association</h4>
+										<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0"><strong>Darwyn and Marie Linder Graduate Fellowship</strong>, Department of Psychology, ASU</div>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2022</div>
-
-									</div>
-									<div class="item-content">
-										<p>You can use this section for your side projects. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.</p>
-
-									</div>
-								</div><!--//item-->
-								<div class="item">
-									<div class="item-heading row align-items-center mb-2">
-										<h4 class="item-title col-12 col-md-6 col-lg-8 mb-2 mb-md-0">Project Praesent </h4>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">Open Source</div>
-
-									</div>
-									<div class="item-content">
-										<p>You can use this section for your side projects. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim.</p>
-
+										<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0"><strong>Graduate Outstanding Research Award</strong>,  The Society for Personality and Social Psychology</div>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2020</div>
+										<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0"><strong>The College Graduate Excellence Award</strong>, ASU</div>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2018, 2020, 2022</div>
+										<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0"><strong>JumpStart Seed Research Grant</strong>, ASU Graduate and Professional Student Association</div>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2018</div>
+										<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0"><strong>Research Excellence Award</strong>, Department of Psychology, ASU</div>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2017</div>
+										<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0"><strong>Brain Korea 21+ Scholarship</strong>, Ministry of Science, ICT, and Future Planning</div>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2015-2017</div>
 									</div>
 								</div><!--//item-->
 							</section><!--//project-section-->
@@ -125,7 +114,7 @@
 						</div><!--//resume-main-->
 						<aside class="resume-aside col-12 col-lg-4 col-xl-3 px-lg-4 pb-lg-4">
 							<section class="lab-section py-3">
-								<h3 class="text-uppercase resume-section-heading mb-4">Lab</h3>
+								<h3 class="text-uppercase resume-section-heading mb-3">Lab</h3>
 								<div class="item">
 									<h4 class="item-title">Evolution, Ecology, & Social Behavior</h4>
 									<ul class="list-unstyled resume-lab-list">
@@ -154,29 +143,24 @@
 											</div><!--//item-->
 									</section><!--//lab-section-->
 
-									<section class="education-section py-3">
-										<h3 class="text-uppercase resume-section-heading mb-4">Awards</h3>
-										<ul class="list-unstyled resume-awards-list">
-											<li class="mb-3">
-												<div class="font-weight-bold">Award Lorem Ipsum</div>
-												<div class="text-muted">Microsoft lorem ipsum (2019)</div>
-											</li>
-											<li>
-												<div class="font-weight-bold">Award Donec Sodales</div>
-												<div class="text-muted">Oracle Aenean (2017)</div>
-											</li>
+									<section class="talk-section py-3">
+										<h3 class="text-uppercase resume-section-heading mb-3">Invited talk</h3>
+										<ul class="list-unstyled resume-lang-list">
+											<li class="mb-2">Williams College <span class="text-muted">| Nov. 2022</span></li>
+											<li>Oklahoma State University <span class="text-muted">| Oct. 2022</span></li>
 										</ul>
-									</section><!--//education-section-->
+									</section><!--//talk-section-->
+
 
 									<section class="skills-section py-3">
-										<h3 class="text-uppercase resume-section-heading mb-4">Language</h3>
+										<h3 class="text-uppercase resume-section-heading mb-3">Language</h3>
 										<ul class="list-unstyled resume-lang-list">
 											<li class="mb-0">Korean, English, R, HTML, SPSS, SAS</li>
 										</ul>
 									</section><!--//statistic-section-->
 
 									<section class="statistic-section py-3">
-										<h3 class="text-uppercase resume-section-heading mb-4">Quantitative Training</h3>
+										<h3 class="text-uppercase resume-section-heading mb-3">Quantitative Training</h3>
 										<ul class="list-unstyled resume-interests-list mb-0">
 											<li>ANOVA | Kevin Grimm</li>
 											<li>Multiple regression | Leona Aiken</li>
@@ -185,7 +169,7 @@
 									</section><!--//statistic-section-->
 
 									<section class="reference-section py-3">
-										<h3 class="text-uppercase resume-section-heading mb-4">Reference</h3>
+										<h3 class="text-uppercase resume-section-heading mb-3">Reference</h3>
 										<ul class="list-unstyled resume-education-list">
 											<li class="mb-1">
 												<div class="resume-degree font-weight-bold">Steven L. Neuberg</div>
