--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 								<h3 class="text-uppercase resume-section-heading mb-4">Award</h3>
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
-										<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0"><strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</div>
-										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2022</div>
+										<div class="item-content col-15 col-md-8 col-lg-10 mb-2 mb-md-0"><strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</div>
+										<div class="item-meta col-15 col-md-8 col-lg-6 text-muted text-start text-md-end">2022</div>
 										<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0"><strong>Outstanding Research Award</strong>, ASU Graduate and Professional Student Association</div>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2022</div>
 										<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0"><strong>Darwyn and Marie Linder Graduate Fellowship</strong>, Department of Psychology, ASU</div>
@@ -106,11 +106,17 @@
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2015-2017</div>
 									</div>
 								</div><!--//item-->
-							</section><!--//project-section-->
+							</section><!--//award-section-->
 
+							<section class="pulication-section py-3">
+								<h3 class="text-uppercase resume-section-heading mb-3">pulication</h3>
+								<div class="item mb-3">
+									<div class="item-content">
+										<p>Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Donec pede justo, fringilla vel. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis.</p>
+									</div>
+								</div><!--//item-->
+							</section><!--//pulication-section-->
 
-
-							</section><!--//awards-section-->
 						</div><!--//resume-main-->
 						<aside class="resume-aside col-12 col-lg-4 col-xl-3 px-lg-4 pb-lg-4">
 							<section class="lab-section py-3">
@@ -155,7 +161,9 @@
 									<section class="skills-section py-3">
 										<h3 class="text-uppercase resume-section-heading mb-3">Language</h3>
 										<ul class="list-unstyled resume-lang-list">
-											<li class="mb-0">Korean, English, R, HTML, SPSS, SAS</li>
+											<li class="mb-0">Korean, English, </li>
+											<li>R, SPSS, SAS, </li>
+											<li>HTML</li>
 										</ul>
 									</section><!--//statistic-section-->
 
