--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 								<h3 class="text-uppercase resume-section-heading mb-4">Award</h3>
 								<div class="item mb-3">
 									<div class="item-heading row align-items-center mb-2">
-										<div class="item-content col-15 col-md-8 col-lg-10 mb-2 mb-md-0"><strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</div>
-										<div class="item-meta col-15 col-md-8 col-lg-6 text-muted text-start text-md-end">2022</div>
+										<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0"><strong>Faculty Women’s Association Distinguished Graduate Student Award</strong>, ASU</div>
+										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2022</div>
 										<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0"><strong>Outstanding Research Award</strong>, ASU Graduate and Professional Student Association</div>
 										<div class="item-meta col-12 col-md-6 col-lg-4 text-muted text-start text-md-end">2022</div>
 										<div class="item-content col-12 col-md-6 col-lg-8 mb-2 mb-md-0"><strong>Darwyn and Marie Linder Graduate Fellowship</strong>, Department of Psychology, ASU</div>
@@ -112,7 +112,7 @@
 								<h3 class="text-uppercase resume-section-heading mb-3">pulication</h3>
 								<div class="item mb-3">
 									<div class="item-content">
-										<p>Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Donec pede justo, fringilla vel. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis.</p>
+										<p> <strong>Ko, A.</strong>, Pick, C. M., Kwon, J. Y., Barlev, M., Krems, J. A., Varnum, M. E., ... & Kenrick, D. T. (2020). <strong>Family matters: Rethinking the psychology of human social motivation</strong>. <i>Perspectives on Psychological Science, 15</i>(1), 173-201.</p>
 									</div>
 								</div><!--//item-->
 							</section><!--//pulication-section-->
