--- a/index.html
+++ b/index.html
@@ -109,10 +109,16 @@
 							</section><!--//award-section-->
 
 							<section class="pulication-section py-3">
-								<h3 class="text-uppercase resume-section-heading mb-3">pulication</h3>
+								<h3 class="text-uppercase resume-section-heading mb-3">paper published & invited revision</h3>
 								<div class="item mb-3">
 									<div class="item-content">
-										<p> <strong>Ko, A.</strong>, Pick, C. M., Kwon, J. Y., Barlev, M., Krems, J. A., Varnum, M. E., ... & Kenrick, D. T. (2020). <strong>Family matters: Rethinking the psychology of human social motivation</strong>. <i>Perspectives on Psychological Science, 15</i>(1), 173-201.</p>
+										<p><strong>Ko, A.</strong>, Neuberg, S. L., Pick, C. M., Varnum, M. E. W., & Becker, D. V. (revision under review). <strong>Responses to political partisans are calibrated by a COVID-sensitive disease avoidance psychology</strong>. <i>PNAS (Proceedings of the National Academy of Science)</i> [12.78]</p>
+										<p><strong>Ko, A.</strong>, Suh, E. M., Shin, J., & Neuberg, S. L. (accepted with minor revision). <strong>Functionally calibrating life satisfaction: The case of mating motives and self-perceived mate value</strong>. <i>Journal of Happiness Studies</i>. [4.09]</p>
+										<p>Pick, C. M., <strong>Ko, A.</strong>, Wormley, A. S., Wiezel, A., Kenrick, D. T., … & Varnum, M. E. W. (2022). <strong>Family still matters: Human social motivation during a global pandemic</strong>. <i>Evolution and Human Behavior, 43</i>(6), 527-535. [5.33]</p>
+										<p>Pick, C. M., <strong>Ko, A.</strong>, Kenrick, D. T., … & Varnum, M. E. W. (2022). <strong>Fundamental social motives measured across forty-two cultures in two waves</strong>. <i>Scientific Data, 9</i>(1), 1-12. Link OSF [8.50] </p>
+										<p>Barlev, M., <strong>Ko, A.</strong>, Krems, J. A., & Neuberg, S. L. (2022). <strong>Weight location moderates weight-based self-devaluation and perceived social devaluation in women</strong>. <i>Social Psychological and Personality Science, 19485506211060724</i>. Link OSF [5.32] </p>
+										<p>Krems, J. A., <strong>Ko, A.</strong>, Moon, J. W., & Varnum, M. E. W. (2021). S<strong>exually unrestricted women are perceived as having low self-esteem: First evidence for a pervasive, robust (but unfounded) stereotype</strong>. <i>Psychological Science, 32</i>(6), 871-889. Link OSF [10.17]</p>
+										<p><strong>Ko, A.</strong>, Pick, C. M., Kwon, J. Y., Barlev, M., Krems, J. A., Varnum, M. E., ... & Kenrick, D. T. (2020). <strong>Family matters: Rethinking the psychology of human social motivation</strong>. <i>Perspectives on Psychological Science, 15</i>(1), 173-201.</p>
 									</div>
 								</div><!--//item-->
 							</section><!--//pulication-section-->
