--- a/index.html
+++ b/index.html
@@ -118,7 +118,10 @@
 										<p>Pick, C. M., <strong>Ko, A.</strong>, Kenrick, D. T., … & Varnum, M. E. W. (2022). <strong>Fundamental social motives measured across forty-two cultures in two waves</strong>. <i>Scientific Data, 9</i>(1), 1-12. Link OSF [8.50] </p>
 										<p>Barlev, M., <strong>Ko, A.</strong>, Krems, J. A., & Neuberg, S. L. (2022). <strong>Weight location moderates weight-based self-devaluation and perceived social devaluation in women</strong>. <i>Social Psychological and Personality Science, 19485506211060724</i>. Link OSF [5.32] </p>
 										<p>Krems, J. A., <strong>Ko, A.</strong>, Moon, J. W., & Varnum, M. E. W. (2021). S<strong>exually unrestricted women are perceived as having low self-esteem: First evidence for a pervasive, robust (but unfounded) stereotype</strong>. <i>Psychological Science, 32</i>(6), 871-889. Link OSF [10.17]</p>
-										<p><strong>Ko, A.</strong>, Pick, C. M., Kwon, J. Y., Barlev, M., Krems, J. A., Varnum, M. E., ... & Kenrick, D. T. (2020). <strong>Family matters: Rethinking the psychology of human social motivation</strong>. <i>Perspectives on Psychological Science, 15</i>(1), 173-201.</p>
+										<p><strong>Ko, A.</strong>, Pick, C. M., Kwon, J. Y., Barlev, M., Krems, J. A., Varnum, M. E., ... & Kenrick, D. T. (2020). <strong>Family matters: Rethinking the psychology of human social motivation</strong>. <i>Perspectives on Psychological Science, 15</i>(1), 173-201. [11.62]</p>
+										<p><strong>Ko, A.</strong>, & Suh, E. M. (2019). <strong>Does physical attractiveness buy happiness? Women’s mating motivation and happiness</strong>. <i>Motivation and Emotion, 43</i>(1), 1–11. [4.14]</p>
+										<p>Becker, D. V., Rheem, H., Pick, C. M., <strong>Ko, A.</strong>, & Lafko, S. R. (2019). <strong>Angry faces hold attention: Evidence of attentional adhesion in two paradigms</strong>. <i>Progress in Brain Research, 247</i>. [2.62]
+</p>
 									</div>
 								</div><!--//item-->
 							</section><!--//pulication-section-->
