--- a/index.html
+++ b/index.html
@@ -129,6 +129,20 @@
 							 </div>
 							</section><!--//pulication-section-->
 
+							<section class="pulication-section py-3">
+								<h3 class="text-uppercase resume-section-heading mb-3">paper SUBMITTED & IN PREPARATION</h3>
+								<div class="item mb-2">
+									<div class="item-heading row align-items-center mb-2">
+										<div class="item-content">
+											<p>Kirsch, A., Kenrick, D. T., <strong>Ko, A.</strong> , Pick, C. M., & Varnum, M. E. W. (submitted) Sibling aggression is surprisingly common and sexually egalitarian. OSF </p>
+											<p><strong>Ko, A.</strong>  & Neuberg, S. L. (paper fully drafted) Ecological affordances: What they are, and how people manage them, differs by life stage. </p>
+											<p><strong>Ko, A.</strong> , Becker, D. V., & Neuberg, S. L. (five datasets collected and being analyzed) How do people judge diversity and fairness?</p>
+											<p><strong>Ko, A.</strong> & Neuberg, S. L. (six-wave longitudinal panel data collected and being analyzed) Intrapersonal calibration of motivations.</p>
+									 </div>
+								 </div><!--//item-->
+							 </div>
+							</section><!--//pulication-section-->
+
 						</div><!--//resume-main-->
 						<aside class="resume-aside col-12 col-lg-4 col-xl-3 px-lg-4 pb-lg-4">
 							<section class="lab-section py-3">
